kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arthur-vardevanyan
  namespace: arthur-vardevanyan
spec:
  selector:
    app: arthur-vardevanyan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
