kubernetes/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: <PROJECT>
  namespace: <PROJECT>
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`<URL>`)
      kind: Rule
      services:
        - name: <PROJECT>
          port: 80
